add more operations and remove unneeded tokens

--- a/config.js.template
+++ b/config.js.template
@@ -1,5 +1,4 @@
 
 module.exports = {
-    cookie_jsessionid: 'JSESSIONID',
-    courseid_interested: ['CID1', 'CID2']
+    redis_url: 'REDIS_URL'
 };
