--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "async-redis": "^1.1.7",
     "cheerio": "^1.0.0-rc.3",
+    "file-box": "^0.8.27",
+    "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
     "redis": "^2.8.0",
     "superagent": "^5.2.1",
+    "tmp": "^0.1.0",
     "wechaty": "^0.28.3",
     "wechaty-puppet": "^0.16.1",
     "wechaty-puppet-mock": "^0.16.1",
